GSAP animation done

--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
 </head>
 <body>
   <section class="hero">
-    <div class="wrap">
-      <div class="box" style="z-index: 6">1</div>
-      <div class="box" style="z-index: 5">2</div>
-      <div class="box" style="z-index: 4">3</div>
-      <div class="box" style="z-index: 3">4</div>
-      <div class="box" style="z-index: 2">5</div>
-      <div class="box" style="z-index: 1">6</div>
+    <div class="hero-cards wrap">
+      <div class="hero-card box" style="z-index: 6">1</div>
+      <div class="hero-card box" style="z-index: 5">2</div>
+      <div class="hero-card box" style="z-index: 4">3</div>
+      <div class="hero-card box" style="z-index: 3">4</div>
+      <div class="hero-card box" style="z-index: 2">5</div>
+      <div class="hero-card box" style="z-index: 1">6</div>
+      <div class="hero-card box" style="z-index: 0">7</div>
     </div>
     <div class="hero-inner">
-      <h1 class="hero-title">Creative freedom</h1>
-      <p class="hero-subtitle">(That's actually free)</p>
-      <p class="scroll-prompt">Scroll down</p>
+      <img src="Content.png" alt="Content" class="hero-content-img" />
     </div>
   </section>
 
