--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
   <section class="hero">
     <div class="hero-cards wrap">
-      <div class="hero-card box" style="z-index: 6">1</div>
-      <div class="hero-card box" style="z-index: 5">2</div>
-      <div class="hero-card box" style="z-index: 4">3</div>
-      <div class="hero-card box" style="z-index: 3">4</div>
-      <div class="hero-card box" style="z-index: 2">5</div>
-      <div class="hero-card box" style="z-index: 1">6</div>
-      <div class="hero-card box" style="z-index: 0">7</div>
+      <div class="hero-card-gsap box" style="z-index: 6">1</div>
+      <div class="hero-card-gsap box" style="z-index: 5">2</div>
+      <div class="hero-card-gsap box" style="z-index: 4">3</div>
+      <div class="hero-card-gsap box" style="z-index: 3">4</div>
+      <div class="hero-card-gsap box" style="z-index: 2">5</div>
+      <div class="hero-card-gsap box" style="z-index: 1">6</div>
+      <div class="hero-card-gsap box" style="z-index: 0">7</div>
     </div>
     <div class="hero-inner">
       <img src="Content.png" alt="Content" class="hero-content-img" />
