--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section class="hero">
+  <section class="hero-section">
     <div class="hero-cards wrap">
       <div class="hero-card-gsap box" style="z-index: 6">1</div>
       <div class="hero-card-gsap box" style="z-index: 5">2</div>
@@ -18,7 +18,7 @@
       <div class="hero-card-gsap box" style="z-index: 0">7</div>
     </div>
     <div class="hero-inner">
-      <img src="Content.png" alt="Content" class="hero-content-img" />
+      <img src="Content.png" alt="Content" class="prod-photo_hero-main-wrap" />
     </div>
   </section>
 
